--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/server.js",
-    "start:dev": "nodemon src/server.js"
+    "dev": "nodemon src/server.js"
   },
   "dependencies": {
     "express": "^4.21.2",
@@ -14,7 +14,6 @@
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
-    "nodemon": "^3.0.0"
+    "nodemon": "^3.1.9"
   }
 }
-
